add-courses-component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,8 +6,5 @@
     <h1 class="welcome-text">שלום וברוכים הבאים למרכז הכשרה וקידום</h1>
     <img src="assets/image2.jpg" alt="תמונה מספר 2" class="small-image">
   </div>
-  <button routerLink="/login" class="login-button">התחברות</button>
+  <button [routerLink]="['/login']" class="login-button">התחברות</button>
 </div>
-<a routerLink="/login">התחברות</a>
-<button routerLink="//login" class="login-button">התחברות</button>
-<a routerLink="//login">התחברות</a>
