--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,10 @@
 <div class="home-container">
   <div class="image-side">
-    <img src="assets/image1.jpg" alt="תמונה מספר 1">
+    <img src="assets/images/image1.jpg" alt="תמונה מספר 1">
   </div>
   <div class="text-side">
     <h1 class="welcome-text">שלום וברוכים הבאים למרכז הכשרה וקידום</h1>
-    <img src="assets/image2.jpg" alt="תמונה מספר 2" class="small-image">
+    <img src="assets/images/image2.jpg" alt="תמונה מספר 2" class="small-image">
   </div>
   <button [routerLink]="['/login']" class="login-button">התחברות</button>
 </div>
