--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,6 +5,6 @@
   <div class="text-side">
     <h1 class="welcome-text">שלום וברוכים הבאים למרכז הכשרה וקידום</h1>
     <img src="assets/images/image2.jpg" alt="תמונה מספר 2" class="small-image">
+    <button mat-stroked-button color="primary" [routerLink]="['/login']" class="home-login-button">התחברות</button>
   </div>
-  <button [routerLink]="['/login']" class="login-button">התחברות</button>
 </div>
