--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,15 +1,32 @@
-<div class="app-header">
-    <div class="user-info" (click)="toggleLogoutMenu()">
-      @if (loggedInUserName()) {
-        <div class="user-icon">{{ loggedInUserName() }}</div>
+<header class="header">
+    <div class="logo-container">
+      <a routerLink="/" class="logo">
+        <img class=header-image src="assets/images/image2.jpg" alt="לוגו האתר">
+        <span class="site-name">e-Learning Platform</span>
+      </a>
+    </div>
+  
+    <nav class="nav-links">
+      <a routerLink="/courses" routerLinkActive="active-link">קורסים</a>
+      @if (isLoggedIn()) { @if (authService.currentUserRole() === 'teacher') { <a routerLink="/create-course" routerLinkActive="active-link">צור קורס</a>
+        }
       }
-      @if (showLogoutMenu()) {
-        <div class="logout-menu">
-          <button (click)="logout()">יציאה</button>
-        </div>
+    </nav>
+  
+    <div class="user-actions">
+      @if (!isLoggedIn()) { <a routerLink="/login" class="login-button">התחבר</a>
+        <a routerLink="/register" class="register-button">הירשם</a>
+      } @else {
+        <div class="user-info">
+            @if (userNameFirstLetter()) {
+              <div class="avatar" (click)="toggleLogoutMenu()">{{ userNameFirstLetter() }}</div>
+            }
+            @if (showLogoutMenu()) {
+              <div class="logout-menu">
+                <button (click)="logout()">התנתק</button>
+              </div>
+            }
+          </div>
       }
     </div>
-    <div class="header-image">
-      <img src="assets/images/image2.jpg" alt="לוגו" style="height: 3cm;">
-    </div>
-  </div>
+  </header>
