--- a/src/app/courses/courses-list/courses-list.component.html
+++ b/src/app/courses/courses-list/courses-list.component.html
@@ -19,12 +19,10 @@
             <mat-card-title>{{ course.title }}</mat-card-title>
             <mat-card-subtitle>{{ course.description }}</mat-card-subtitle>
           </mat-card-header>
-          <mat-card-content>
-            <p>מזהה מורה: {{ course.teacherId }}</p>
-          </mat-card-content>
+
           <mat-card-actions>
             <button mat-button color="accent" (click)="viewCourseDetails(course.id)">
-              <mat-icon>info</mat-icon> פרטים
+              <mat-icon>info</mat-icon> לרשימת השיעורים
             </button>
 
             @if (authService.currentUserRole() === 'teacher' && authService.currentUserId() === course.teacherId) {
