--- a/src/app/courses/course-details/course-details.component.html
+++ b/src/app/courses/course-details/course-details.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header> 
+<app-header [title]="'רשימת שיעורים'"></app-header>
 
 <div class="course-details-container">
   @if (errorMessage()) {
